--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ input[type=submit] {
   border: 0 none;
 }
 
-/*Media inqueries info here*/
+/*Media inqueries info*/
 
 
 @media screen and (max-width: 980px ) {
