image size match

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ h3,
   border: 1px solid #ddd;
 }
 /*portfolio page*/
-.work {
+.crystal {
   position: relative;
   width: 274px;
   overflow: auto;
@@ -159,7 +159,7 @@ h3,
   border-bottom: 0;
 }
 .auth-image {
-  width: 200px;
+  width: 100px;
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
