--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   color: #777;
   line-height: 34px;
-  background: url("../images/concrete_seamless.png");
+  background: url("../images/Blue_Stone.jpg");
 }
 * {
   box-sizing: border-box;
@@ -28,7 +28,7 @@ h1,
 h2,
 h3 {
   font-family: 'Georgia', Times, Times New Roman, serif;
-  color: #4aaaa5;
+  color: #4548fd;
   font-weight: 700;
 }
 h1 {
@@ -63,7 +63,7 @@ h3 {
   font-weight: 700;
   font-size: 30px;
   text-decoration: none;
-  background: #4aaaa5;
+  background: #4548fd;
 }
 nav {
   float: right;
@@ -90,7 +90,7 @@ footer {
   font-size: 12px;
   text-align: center;
   background: #666;
-  border-top: 8px solid #4aaaa5;
+  border-top: 8px solid #4548fd;
 }
 /*sidebar*/
 .sidebar {
@@ -155,7 +155,7 @@ h3,
   text-align: center;
   line-height: 30px;
   font-weight: 300;
-  background: #4aaaa5;
+  background: #4548fd;
   border-bottom: 0;
 }
 .auth-image {
@@ -195,7 +195,7 @@ input[type=submit] {
   color: #fff;
   font-size: 18px;
   cursor: pointer;
-  background: #4aaaa5;
+  background: #4548fd;
   border: 0 none;
 }
 
